:ok_hand: add redux with weeklyReports and lastDayReport reducers
Add redux removing react hooks

--- a/src/renderer/views/style.css
+++ b/src/renderer/views/style.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap");
 
 body {
+  background-color: rgba(27, 27, 27, 0.98);
   font-family: "Noto Sans JP", sans-serif;
-  height: 100vh;
+  height: 100%;
   margin: 0;
   padding: 0;
-  width: 100vw;
+  width: 100%;
 }
